@startuml

title __CONDITIONS's Class Diagram__\n

    namespace onditions {
      abstract class conditions.AConditionMax {
          + isConditionRespected()
          {abstract} # getPourcentageMax()
          {abstract} # setPourcentageMax()
      }
    }


    namespace onditions {
      class conditions.IsMontantMaxValidHabitation {
          - pourcentageMax : double
          + getPourcentageMax()
          + setPourcentageMax()
      }
    }


    namespace onditions {
      class conditions.IsMontantMaxValidVehicule {
          - pourcentageMax : double
          + getPourcentageMax()
          + setPourcentageMax()
      }
    }


    namespace onditions {
      class conditions.IsMontantMinValidHabitation {
          + isConditionRespected()
      }
    }


    namespace onditions {
      class conditions.IsMontantMinValidVehicule {
          + isConditionRespected()
      }
    }


    namespace onditions {
      class conditions.IsPeriodeValid {
          + isConditionRespected()
      }
  }
  

  conditions.AConditionMax .up.|> encheres.interfaces.ICondition
  conditions.IsMontantMaxValidHabitation -up-|> conditions.AConditionMax
  conditions.IsMontantMaxValidVehicule -up-|> conditions.AConditionMax
  conditions.IsMontantMinValidHabitation .up.|> encheres.interfaces.ICondition
  conditions.IsMontantMinValidVehicule .up.|> encheres.interfaces.ICondition
  conditions.IsPeriodeValid .up.|> encheres.interfaces.ICondition


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
